[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/Fishing/FishingAreas/InterfaceManager.gd" type="Script" id=2]
[ext_resource path="res://Assets/Sound/SoundEffects/chainmail1.wav" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/SoundEffects/bubble3.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/SoundEffects/398702__inspectorj__water-swirl-small-1.wav" type="AudioStream" id=6]
[ext_resource path="res://Game/Fishing/FishingAreas/FishingAreaTemplate.gd" type="Script" id=7]
[ext_resource path="res://Assets/Art/Fonts/Space_Grotesk/static/SpaceGrotesk-Medium.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.12549, 0.54902, 0.529412, 1 )

[sub_resource type="StyleBoxFlat" id=3]

[sub_resource type="DynamicFont" id=4]
size = 6
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 8
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 8
font_data = ExtResource( 1 )

[node name="FishingAreaTemplate" type="Node2D"]
script = ExtResource( 7 )

[node name="InstanceManager" type="Node2D" parent="."]
position = Vector2( 45, 180 )
script = ExtResource( 2 )

[node name="AreaExperience" type="RichTextLabel" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 57.0
margin_bottom = 15.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "Undiscovered"
text = "Undiscovered"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaExperienceProgressBar" type="ProgressBar" parent="."]
margin_left = 4.0
margin_top = 12.0
margin_right = 43.0
margin_bottom = 26.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
step = 1.0
value = 50.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Percent" type="Label" parent="AreaExperienceProgressBar"]
margin_left = 40.5796
margin_top = 3.36358
margin_right = 53.5796
margin_bottom = 11.3636
custom_fonts/font = SubResource( 4 )
text = "100%"

[node name="FishingAreaInfo" type="Label" parent="."]
margin_left = 73.0
margin_top = 2.0
margin_right = 144.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 5 )
text = "Area Name
Area Level:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EquippedLoadout" type="Label" parent="."]
margin_left = 3.0
margin_top = 28.0
margin_right = 115.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 6 )
text = "Rod:
Bait:
"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckRodLevelIndicator" type="Label" parent="."]
margin_left = 3.0
margin_top = 70.4653
margin_right = 115.0
margin_bottom = 109.465
custom_fonts/font = SubResource( 6 )
text = "Rod Level:
You can fish here with this rod!"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuccessfullPullSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="UnsuccessfullPullSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="CastRodSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0

[node name="GoBackToMenuButton" type="Button" parent="."]
margin_left = 7.43071
margin_top = 226.108
margin_right = 150.431
margin_bottom = 253.108
rect_scale = Vector2( 0.9, 0.9 )
custom_fonts/font = SubResource( 7 )
text = "Go back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishingButton" type="Button" parent="."]
margin_left = 4.0
margin_top = 119.0
margin_right = 88.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 8 )
text = "Go Fishing!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadoutButton" type="Button" parent="."]
margin_left = 94.0
margin_top = 119.0
margin_right = 139.0
margin_bottom = 167.0
custom_fonts/font = SubResource( 8 )
text = "Loadout"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notification" type="RichTextLabel" parent="."]
margin_left = 5.0
margin_top = 176.0
margin_right = 136.0
margin_bottom = 213.0
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
bbcode_text = "[color=aqua]Catch more fish to level up your fishing area level which unlocks more valuable fish[/color]"
text = "Catch more fish to level up your fishing area level which unlocks more valuable fish"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GoBackToMenuButton" to="." method="_on_GoBackToMenuButton_pressed"]
[connection signal="pressed" from="FishingButton" to="." method="_on_FishingButton_pressed"]
[connection signal="pressed" from="LoadoutButton" to="." method="_on_LoadoutButton_pressed"]
